2013-09-09  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css: Added style to forms
	to fix differents between firefox browser and chrome

2013-09-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_tasks.php,
	  operation/projects/task.php: Fixed a call to a function.
	
	* operation/invoices/invoices.php,
	  operation/invoices/invoice_detail.php: Fixed the ACL.
	
2013-09-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/contacts/contact_manage.php: Fixed a validation
	error.
	
2013-09-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Added the functions
	"get_contract_expire_days", "get_contract_status" and
	"get_contract_status_name".
	
	* operation/projects/task.php: Little change on the
	alignment of the elements of the workorder row in the
	task tree view.
	
	* extras/migrate.sql: Added a new column to the table
	'tcontract'.
	
	* operation/contracts/contract_detail.php: Added the
	parameter status to the form and the listing filter.
	Added a filter by days that remain to the expire of the
	contracts.
	
2013-09-06  Dario Rodriguez <dario@artica.es>

	* operation/leads/lead_pipeline.php,
	include/styles/integria.css: Improved pipeline view to show
	company and an alert when lead needs attention.

2013-09-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_tasks.php,
	  operation/projects/task.php: Added code to force the
	  load of the sublevels.
	
	* include/js/integria_projects.js: Improved the code
	of the function "loadTasksSubTree". Adapted to the
	new load requirements.
	
2013-09-06  Dario Rodriguez <dario@artica.es>

	*  include/styles/integria.css,
 	include/functions_ui.php,
 	include/constants.php,
	operation/leads/lead_pipeline.php: Improved lead pipeline
	view.
 	* extras/migrate.sql: Added queries to convert lead
	progress from old values to new ones.

2013-09-06  Dario Rodriguez <dario@artica.es>
