@@ -1,3 +1,8 @@
+2013-09-09  Vanessa Gil <vanessa.gil@artica.es>
+
+	* include/functions_form.php
+	  operation/inventories/manage_objects_type_fields.php: Fixed bugs.
+
 2013-09-09  Sergio Martin <sergio.martin@artica.es>
 
 	* include/styles/integria.css: Added style to forms
